- Add TIFUnicode from (author Prapilk)
- Add Implemented color selection and saving for form and controls.
- Add image converter: black and white, different colors, and functions.
- Add Paragraph-to-Line Converter.
- Add XmlException if XML is missing Load Animationlist.
- Add Animationlist Editor.
- Add Main button added for Ultima Online directory.

Version : 4.12.3 #XG1
- Add Items Image Colors and Update.
- Add Script Creator - Book.
- Add Help - Tutorial Animationen Install German and Englisch.
- Add Animation - Edit UoBodyconv and Mobtypes Form.
- Add Animation - Script Script Creator.
- Add Animation - Script Script for RunUo and Sphere.
- Add Animation - Script Edit Animationlist.
- Add Creater Amin.idx and Amin.mul Empty.
- Add ScriptCreator Buttons Edit and Scripts
- Add Items Mark
- Add Items Goto Mark
- Add LandTiles Mark
- Add LandTiles Go To
- Add LandtilesView into TileArtForm
- Add Editor for Tilesbrush.xml (CentrEd)
- Add Transitions - Graphic (From Prapilk)
- Add TileViewContextMenuStrip_Closing To focus on the index.
- Add Ciloc a Copy Clipboard Only 
- Add Ciloc Advanced search function that highlights matches and navigates through results.
- Add AddHtmlLocalized Form created, fills text fields, generates and copies code for HTML localization.
- Add Aboutbox Link and Repository Info.

Version : 4.12.2 #XG1
- BildFusion Add Sharp , Clipboard, Texture Cut.
- Make Texture, White is transparent, and black represents the transition, Texture into Texture, Colors.
- Add triangle for Tiles TextureWindowForm.
- Path Settings, Reload all Files and New, Load Single Mul file, Delete Line
- Add New Map Forell into SDK Map class
- Add Muls into SDK File class
- Add Map Forell into Map Controll and make nee class.
- Add Options %AppData% open dir
- Add Options New Map Forell
- Add Insert Maker Delete function
- Add Singe UOP Extract and Single Art Extract
- Add Pass coordinates